--- a/Lights.QuickMVC/Lights.QuickMVC.AdminController/Lights.QuickMVC.AdminController.csproj
+++ b/Lights.QuickMVC/Lights.QuickMVC.AdminController/Lights.QuickMVC.AdminController.csproj
@@ -72,6 +72,16 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Lights.Core.Log4net\Lights.Core.Log4net.csproj">
+      <Project>{d3794c29-0d11-466e-8ab6-d991e9569c4a}</Project>
+      <Name>Lights.Core.Log4net</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Lights.Core.Utils\Lights.Core.Utils.csproj">
+      <Project>{abc12863-74fe-4e5c-9089-ce3dd1bb3380}</Project>
+      <Name>Lights.Core.Utils</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
