--- a/Lights.QuickMVC/Lights.QuickMVC.Web/Lights.QuickMVC.Web.csproj
+++ b/Lights.QuickMVC/Lights.QuickMVC.Web/Lights.QuickMVC.Web.csproj
@@ -183,6 +183,7 @@
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Areas\Admin\Views\web.config" />
     <Content Include="Areas\Admin\Views\Home\Index.cshtml" />
+    <Content Include="log4net.config" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
