开始制作页面

--- a/Lights.QuickMVC/Lights.QuickMVC.AdminController/Lights.QuickMVC.AdminController.csproj
+++ b/Lights.QuickMVC/Lights.QuickMVC.AdminController/Lights.QuickMVC.AdminController.csproj
@@ -67,6 +67,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="HomeController.cs" />
+    <Compile Include="LoginController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
