--- a/Lights.QuickMVC/Lights.Framework.Manager/Lights.Framework.Manager.csproj
+++ b/Lights.QuickMVC/Lights.Framework.Manager/Lights.Framework.Manager.csproj
@@ -30,6 +30,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.10.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="SqlSugar, Version=4.6.1.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\sqlSugar.4.6.1\lib\SqlSugar.dll</HintPath>
       <Private>True</Private>
@@ -47,6 +51,7 @@
     <Compile Include="BaseDataManager.cs" />
     <Compile Include="IManager\IManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SqlSugarCreateEntity.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Lights.Core.Log4net\Lights.Core.Log4net.csproj">
@@ -63,6 +68,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
