--- a/Lights.QuickMVC/Lights.Framework.SqlSugar/Lights.Framework.SqlSugar.csproj
+++ b/Lights.QuickMVC/Lights.Framework.SqlSugar/Lights.Framework.SqlSugar.csproj
@@ -30,6 +30,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.10.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="SqlSugar, Version=4.6.1.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\sqlSugar.4.6.1\lib\SqlSugar.dll</HintPath>
       <Private>True</Private>
@@ -49,6 +53,7 @@
     <Compile Include="SqlsugarRepository.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
