--- a/Lights.QuickMVC/Lights.Admin.IService/Lights.Admin.IService.csproj
+++ b/Lights.QuickMVC/Lights.Admin.IService/Lights.Admin.IService.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{84D2FF4F-8E2E-41ED-858D-AEE161ECD788}</ProjectGuid>
+    <ProjectGuid>{EC67C618-AE34-4A71-9011-09E30F4EA9E0}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Lights.Admin.Service</RootNamespace>
-    <AssemblyName>Lights.Admin.Service</AssemblyName>
+    <RootNamespace>Lights.Admin.IService</RootNamespace>
+    <AssemblyName>Lights.Admin.IService</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,10 +30,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.10.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -44,19 +40,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="LoginService.cs" />
+    <Compile Include="IloginService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SystemService.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Lights.Admin.IService\Lights.Admin.IService.csproj">
-      <Project>{ec67c618-ae34-4a71-9011-09e30f4ea9e0}</Project>
-      <Name>Lights.Admin.IService</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Lights.Admin.Model\Lights.Admin.Model.csproj">
-      <Project>{d1b96688-f625-4c74-8c1c-a458b71d0484}</Project>
-      <Name>Lights.Admin.Model</Name>
-    </ProjectReference>
     <ProjectReference Include="..\Lights.Core.Log4net\Lights.Core.Log4net.csproj">
       <Project>{d3794c29-0d11-466e-8ab6-d991e9569c4a}</Project>
       <Name>Lights.Core.Log4net</Name>
@@ -69,14 +56,6 @@
       <Project>{715266c3-3d8b-4f73-b69a-572b2f8c1941}</Project>
       <Name>Lights.Framework.Manager</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Lights.Framework.SqlSugar\Lights.Framework.SqlSugar.csproj">
-      <Project>{6873fdb9-c228-486f-861b-c54803500f8d}</Project>
-      <Name>Lights.Framework.SqlSugar</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="app.config" />
-    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
