--- a/Lights.QuickMVC/Lights.QuickMVC.AdminController/Lights.QuickMVC.AdminController.csproj
+++ b/Lights.QuickMVC/Lights.QuickMVC.AdminController/Lights.QuickMVC.AdminController.csproj
@@ -74,6 +74,18 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Lights.Admin.IService\Lights.Admin.IService.csproj">
+      <Project>{ec67c618-ae34-4a71-9011-09e30f4ea9e0}</Project>
+      <Name>Lights.Admin.IService</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Lights.Admin.Model\Lights.Admin.Model.csproj">
+      <Project>{d1b96688-f625-4c74-8c1c-a458b71d0484}</Project>
+      <Name>Lights.Admin.Model</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Lights.Admin.Service\Lights.Admin.Service.csproj">
+      <Project>{84d2ff4f-8e2e-41ed-858d-aee161ecd788}</Project>
+      <Name>Lights.Admin.Service</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Lights.Core.Log4net\Lights.Core.Log4net.csproj">
       <Project>{d3794c29-0d11-466e-8ab6-d991e9569c4a}</Project>
       <Name>Lights.Core.Log4net</Name>
