--- a/Lights.QuickMVC/Lights.QuickMVC.Web/Web.config
+++ b/Lights.QuickMVC/Lights.QuickMVC.Web/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-Lights.QuickMVC.Web-20171219095435.mdf;Initial Catalog=aspnet-Lights.QuickMVC.Web-20171219095435;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="ConnectionStr" connectionString="Server=.;Database=QuickMVC;User Id=sa;Password=aaabbb123;" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
