过滤器，未完成

--- a/Lights.QuickMVC/Lights.QuickMVC.AdminController/Lights.QuickMVC.AdminController.csproj
+++ b/Lights.QuickMVC/Lights.QuickMVC.AdminController/Lights.QuickMVC.AdminController.csproj
@@ -66,6 +66,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Filter\BaseAdminController.cs" />
+    <Compile Include="Filter\FilterAuthorization.cs" />
     <Compile Include="HomeController.cs" />
     <Compile Include="LoginController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -95,6 +97,7 @@
       <Name>Lights.Core.Utils</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
