--- a/Lights.QuickMVC/Lights.QuickMVC.Web/Areas/Admin/Views/web.config
+++ b/Lights.QuickMVC/Lights.QuickMVC.Web/Areas/Admin/Views/web.config
@@ -18,7 +18,7 @@
         <add namespace="System.Web.Routing" />
         <add namespace="System.Web.Optimization" />
         <add namespace="Lights.QuickMVC.Web" />
-        
+        <add namespace="Lights.Admin.Model"/>
       </namespaces>
     </pages>
   </system.web.webPages.razor>
