--- a/Lights.QuickMVC/Lights.QuickMVC.Web/Areas/Admin/Views/web.config
+++ b/Lights.QuickMVC/Lights.QuickMVC.Web/Areas/Admin/Views/web.config
@@ -19,6 +19,7 @@
         <add namespace="System.Web.Optimization" />
         <add namespace="Lights.QuickMVC.Web" />
         <add namespace="Lights.Admin.Model"/>
+        <add namespace="Lights.QuickMVC.AdminModel"/>
       </namespaces>
     </pages>
   </system.web.webPages.razor>
