添加两个例子

--- a/Lights.QuickMVC/Lights.QuickMVC.Web/Lights.QuickMVC.Web.csproj
+++ b/Lights.QuickMVC/Lights.QuickMVC.Web/Lights.QuickMVC.Web.csproj
@@ -7468,6 +7468,8 @@
     <Content Include="Content\AdminLTE\yarn.lock" />
     <Content Include="Areas\Admin\Views\Shared\_MainHomeLTE.cshtml" />
     <Content Include="App_Data\功能列表.xlsx" />
+    <Content Include="App_Data\HISDemo-10.rar" />
+    <Content Include="App_Data\HISDemoDb.rar" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
