--- a/Lights.QuickMVC/Lights.Admin.Service/Lights.Admin.Service.csproj
+++ b/Lights.QuickMVC/Lights.Admin.Service/Lights.Admin.Service.csproj
@@ -47,6 +47,7 @@
     <Compile Include="LoginService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SystemService.cs" />
+    <Compile Include="UserService.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Lights.Admin.IService\Lights.Admin.IService.csproj">
