--- a/Lights.QuickMVC/Lights.QuickMVC.Web2/Lights.QuickMVC.Web2.csproj
+++ b/Lights.QuickMVC/Lights.QuickMVC.Web2/Lights.QuickMVC.Web2.csproj
@@ -945,6 +945,7 @@
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
     <Content Include="Scripts\AdminPage\login.js" />
+    <Content Include="Scripts\AdminPage\UserIndex.js" />
     <Content Include="Scripts\ai.0.15.0-build58334.js" />
     <Content Include="Scripts\ai.0.15.0-build58334.min.js" />
     <Content Include="Scripts\bootstrap.js" />
