--- a/Lights.QuickMVC/Lights.Admin.IService/Lights.Admin.IService.csproj
+++ b/Lights.QuickMVC/Lights.Admin.IService/Lights.Admin.IService.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IloginService.cs" />
+    <Compile Include="IMenuService.cs" />
     <Compile Include="IUserService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
