--- a/Lights.QuickMVC/Lights.Admin.Service/Lights.Admin.Service.csproj
+++ b/Lights.QuickMVC/Lights.Admin.Service/Lights.Admin.Service.csproj
@@ -45,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="LoginService.cs" />
+    <Compile Include="MenuService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SystemService.cs" />
     <Compile Include="UserService.cs" />
