--- a/Lights.QuickMVC/Lights.QuickMVC.Web/Lights.QuickMVC.Web.csproj
+++ b/Lights.QuickMVC/Lights.QuickMVC.Web/Lights.QuickMVC.Web.csproj
@@ -7471,6 +7471,9 @@
     <Content Include="App_Data\HISDemo-10.rar" />
     <Content Include="App_Data\HISDemoDb.rar" />
     <Content Include="App_Data\tzhsweet-superui-master.zip" />
+    <Content Include="Areas\Admin\Views\Role\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\Menu\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\User\Index.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
